# python-hcl2-ast

./: pyproject.toml  readme.md
.changelog/: 0.1.1.toml  0.1.2.toml  0.1.3.toml  0.1.4.toml  0.2.0.post1.toml  0.2.0.toml  0.3.0.toml  0.3.1.toml  0.4.0.toml  _unreleased.toml
examples/: evaluate.py
src/hcl2_ast/: __init__.py  __main__.py  api.py  ast.py  eval.py  parse.py  transformer.py
tests/: test_import.py  test_parsing.py  test_testcases.py
tests/testcases/: block-01.txt  indexing-01.txt  tuple-01.txt  value-01.txt
